# atmega328p-emulator

./: .gitignore  LICENSE  README.md
atmega328p-emulator-cli/: Cargo.toml
atmega328p-emulator-cli/src/: main.rs
atmega328p-emulator-core/: Cargo.toml
atmega328p-emulator-core/src/: arduino_adapter.rs  lib.rs
